# multifamily_analytics_platform

./: .gitignore  DEVELOPING.md  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  freddie_mac_ingestion.py  freddie_mac_observations.py  health.py  ingestion.py  risk_reports.py
backend/app/core/: config.py  errors.py
backend/app/db/: supabase.py
backend/app/db/repositories/: analytics.py  freddie_mac_observations.py  ingestion_runs.py  properties.py  risk_reports.py
backend/app/schemas/: analytics.py  common.py  freddie_mac.py  ingestion.py  property.py  risk_report.py
backend/app/services/: analytics_service.py  freddie_mac_mlp_ingestion_service.py  freddie_mac_mlp_mapper.py  freddie_mac_observation_service.py  gemini_client.py  hud_arcgis_client.py  ingestion_service.py  property_mapper.py  risk_prompt_builder.py  risk_report_service.py  risk_response_validator.py
backend/app/tests/: test_analytics_service.py  test_freddie_mac_mlp_mapper.py  test_freddie_mac_observation_service.py  test_hud_arcgis_client.py  test_property_mapper.py  test_risk_prompt_builder.py  test_risk_report_service.py  test_risk_response_validator.py
backend/sql/: 001_analytics_views_and_rpc_functions.sql  002_ai_risk_reports.sql
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  formatters.ts  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AiRiskReportPanel.tsx  DataSourceBadge.tsx  (+4 more)
(+3 files in other folders)
